--- a/class_2/composer.json
+++ b/class_2/composer.json
@@ -8,6 +8,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "sempro/phpunit-pretty-print": "^1.2"
     }
 }
